--- a/main.css
+++ b/main.css
@@ -1,4 +1,37 @@
 
+.idcontainer {
+  /* width: 300px;*/
+  /*margin: 200px auto 0;*/
+}
+
+.idfield {
+  display: flex;
+}
+
+.idinputtext {
+  color:rgba(43, 32, 32, 0.76) ;
+  font-size: 18px;
+  border-left: 0;
+  border-right: 0;
+  width: 50px;
+  line-height: 3rem;
+  text-align: center;
+  border: 1px solid #D7DBDD;
+  padding: 0 10px;
+}
+
+.idbutton {
+  color:rgba(43, 32, 32, 0.76) ;
+  font-size: 18px;
+  cursor: pointer;
+  padding: 5px 25px;
+  background-color: white;
+  border: 1px solid #D7DBDD;
+  border-radius: 0;
+  outline: 0;
+}
+
+
 #file-container {
  width:50vw;
  height:100vh;
